RESOLVED FIXED135853
REGRESSION: WebContent process has a sandbox extension for the entirety of user's temp directory
https://bugs.webkit.org/show_bug.cgi?id=135853
Summary REGRESSION: WebContent process has a sandbox extension for the entirety of us...
Alexey Proskuryakov
Reported 2014-08-12 14:10:20 PDT
Some code that makes sense on iOS doesn't make sense on OS X. <rdar://problem/17986556>
Attachments
proposed fix (18.57 KB, patch)
2014-08-12 14:13 PDT, Alexey Proskuryakov
oliver: review+
Alexey Proskuryakov
Comment 1 2014-08-12 14:13:47 PDT
Created attachment 236467 [details] proposed fix
Alexey Proskuryakov
Comment 2 2014-08-12 15:43:55 PDT
Note You need to log in before you can comment on or make changes to this bug.