Source/WebKit2/UIProcess/WebContext.h
@@ -423,18 +423,13 @@ private:
     String cookieStorageDirectory() const;
     String platformDefaultCookieStorageDirectory() const;
 
-    String openGLCacheDirectory() const;
-    String platformDefaultOpenGLCacheDirectory() const;
-
-    String networkingHSTSDatabasePath() const;
-    String platformDefaultNetworkingHSTSDatabasePath() const;
-
 #if PLATFORM(IOS)
+    String openGLCacheDirectory() const;
     String parentBundleDirectory() const;
+    String networkingHSTSDatabasePath() const;
     String webContentHSTSDatabasePath() const;
-#endif
-
     String containerTemporaryDirectory() const;
+#endif
 
 #if PLATFORM(COCOA)
     void registerNotificationObservers();
@@ -531,7 +526,6 @@ private:
     String m_overrideIconDatabasePath;
     String m_overrideDiskCacheDirectory;
     String m_overrideCookieStorageDirectory;
-    String m_overrideOpenGLCacheDirectory;
 
     String m_webSQLDatabaseDirectory;
     String m_indexedDBDatabaseDirectory;
