Source/WebKit2/UIProcess/mac/WebContextMac.mm
@@ -284,24 +284,24 @@ String WebContext::platformDefaultCookieStorageDirectory() const
 #endif
 }
 
-String WebContext::platformDefaultOpenGLCacheDirectory() const
-{
 #if PLATFORM(IOS)
+String WebContext::openGLCacheDirectory() const
+{
     String path = pathForProcessContainer();
     if (path.isEmpty())
         path = NSHomeDirectory();
 
     path = path + "/Library/Caches/com.apple.WebKit.WebContent/com.apple.opengl/";
     return stringByResolvingSymlinksInPath(path);
-#else
-    notImplemented();
-    return [@"" stringByStandardizingPath];
-#endif
 }
 
-String WebContext::platformDefaultNetworkingHSTSDatabasePath() const
+String WebContext::parentBundleDirectory() const
 {
-#if PLATFORM(IOS)
+    return [[[NSBundle mainBundle] bundlePath] stringByStandardizingPath];
+}
+
+String WebContext::networkingHSTSDatabasePath() const
+{
     String path = pathForProcessContainer();
     if (path.isEmpty())
         path = NSHomeDirectory();
@@ -317,16 +317,6 @@ String WebContext::platformDefaultNetworkingHSTSDatabasePath() const
     }
 
     return path + "/HSTS.plist";
-#else
-    notImplemented();
-    return [@"" stringByStandardizingPath];
-#endif
-}
-
-#if PLATFORM(IOS)
-String WebContext::parentBundleDirectory() const
-{
-    return [[[NSBundle mainBundle] bundlePath] stringByStandardizingPath];
 }
 
 String WebContext::webContentHSTSDatabasePath() const
@@ -348,13 +338,12 @@ String WebContext::webContentHSTSDatabasePath() const
     return path + "/HSTS.plist";
 }
 
-#endif
-
 String WebContext::containerTemporaryDirectory() const
 {
     String path = NSTemporaryDirectory();
     return stringByResolvingSymlinksInPath(path);
 }
+#endif
 
 String WebContext::platformDefaultWebSQLDatabaseDirectory()
 {
